src/style.styl
@import './reset.styl'

:root
	//UI等の基準値
	font-size 'clamp(0.8px, var(--px), 1.5px)' % null
	--theme-bg #e5e0cf
	--theme-ink #4b3876
	--theme-primary #ff6338
	--black black
	--var(--white) var(--white)
	--manga-width 'min(100vw, 60vh)' % null
	//漫画座標系の基準値
	--px calc((var(--manga-width) / 324))
	--nav-margin-vert 5rem
	--nav-margin-horiz 10rem
	--header-height 50rem
	--footer-height calc(1rem + var(--nav-margin-vert) + var(--header-height) + var(--footer-padding-bottom))
	--footer-padding-bottom calc(var(--nav-margin-vert) + env(safe-area-inset-bottom))
	--font-small 'monaco', serif

html
	font-weight bold
	font-family serif

//Hide the scrollbar
body
	position fixed
	overflow hidden
	background var(--theme-bg)
	color var(--theme-ink)
	touch-action manipulation

*, button
	font-smooth never !important
	-webkit-font-smoothing none !important
	image-rendering pixelated
	-webkit-image-rendering pixelated
	-webkit-tap-highlight-color transparent

button
	cursor pointer

.splash
	position fixed
	background var(--white)
	inset 0

	.kindle-ish-tree
		position fixed
		bottom 0
		left 'calc((100vw - var(--manga-width)) / 2)' % null
		display block
		margin 0 auto
		width var(--manga-width)

	.ramp
		position fixed
		top 0
		right 0
		left 0
		height 400rem
		background-image url('/assets/splash_ramp.webp')
		background-size contain

	.loading-text
		position relative
		top 24vh
		color var(--black)
		text-align center
		font-size 30rem

		span
			padding 1rem

.bg-overlay, .ink-overlay
	position fixed
	z-index 20
	pointer-events none
	inset 0

.bg-overlay
	background var(--theme-bg)
	mix-blend-mode darken

	html.invert &
		mix-blend-mode lighten

.ink-overlay
	background var(--theme-ink)
	mix-blend-mode lighten

	html.invert &
		mix-blend-mode darken

.fa
	display inline-block
	width 1.2em
	height 1.2em
	line-height 1.2em
	aspect-ratio 1 / 1

.fa-volume-xmark, .fa-volume-high
	text-align left

a
	text-decoration none

.var(--white)-semitransparent
	background-image url('data:image/webp;base64,UklGRlIAAABXRUJQVlA4WAoAAAAQAAAABwAABwAAQUxQSBMAAAABDzD/ERFCIJBQ5jTLxBH9jywDAFZQOCAYAAAAMAEAnQEqCAAIAAIANCWkAANwAP77lAAA')
	background-size 8rem 8rem

html.invert :is(img, .img)
	filter invert(1)

